TEST_PROGRAMS/VALID/shabbir_hussain/prog6.min
var s: string;
s="while x do smt";

