TEST_PROGRAMS/INVALID/shao_kun_deng/invalid2.min
# invalid identifier names

var 1x = int;
var ?x = float;
var "a" = string;
